# 30daysofcode_01

./: .gitignore  CLAUDE.md  README.md  SPEC-day08-bjj-encyclopedia.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: pull_request_template.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  security-scan.yml
apps/day01-french-flashcards/: index.html  package.json
apps/day01-french-flashcards/src/: App.jsx  App.test.jsx  FlashCard.jsx  FlashCard.test.jsx  FlashCardDeck.jsx  FlashCardDeck.test.jsx
apps/day03-round-timer/: index.html  package.json
apps/day03-round-timer/src/: App.jsx  App.test.jsx  CompleteScreen.jsx  CompleteScreen.test.jsx  PresetSelector.jsx  PresetSelector.test.jsx  RoundProgress.jsx  RoundTimer.jsx  RoundTimer.test.jsx  TimerControls.jsx  TimerDisplay.jsx  TimerDisplay.test.jsx  audio.js
apps/day04-bodybuilding-log/: index.html  package.json
apps/day05-bodybuilding-log/: index.html  package.json
apps/day05-bodybuilding-log-part2/: index.html  package.json  vite.config.js
apps/day08-bjj-encyclopedia/backend/: .gitignore  pyproject.toml
apps/day08-bjj-encyclopedia/backend/scripts/: seed.py
apps/day08-bjj-encyclopedia/backend/src/: database.py  main.py
apps/day08-bjj-encyclopedia/backend/src/models/: technique.py
apps/day08-bjj-encyclopedia/backend/src/routes/: techniques.py
apps/day08-bjj-encyclopedia/backend/src/services/: technique_service.py
apps/day08-bjj-encyclopedia/backend/tests/: test_techniques.py
scripts/: new-project.sh  zip-for-review-final.sh
(+92 files in other folders)
