[project]
name = "backend"
version = "0.1.0"
description = "BJJ Technique Encyclopedia backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "sqlmodel>=0.0.34",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "anyio[trio]>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]
